ENH: Changing test data from ico to venus
Change-Id: I1bc72c99ab230851d36a30c27e942e7adcfe1545

--- a/Modules/Filtering/QuadEdgeMeshFiltering/test/CMakeLists.txt
+++ b/Modules/Filtering/QuadEdgeMeshFiltering/test/CMakeLists.txt
@@ -120,130 +120,130 @@ endforeach()
 itk_add_test(NAME itkModifiedButterflyTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_butterfly_0.vtk 0 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_butterfly_0.vtk 0 1)
 
 itk_add_test(NAME itkModifiedButterflyTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_butterfly_1.vtk 0 2)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_butterfly_1.vtk 0 2)
 
 itk_add_test(NAME itkLinearTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_linear_0.vtk 1 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_linear_0.vtk 1 1)
 
 itk_add_test(NAME itkLinearTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_linear_1.vtk 1 2)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_linear_1.vtk 1 2)
 
 itk_add_test(NAME itkLoopTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_loop_0.vtk 2 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_loop_0.vtk 2 1)
 
 itk_add_test(NAME itkLoopTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_loop_1.vtk 2 2)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_loop_1.vtk 2 2)
 
 
 itk_add_test(NAME itkSquareThreeTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_square3_0.vtk 3 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_square3_0.vtk 3 1)
 
 itk_add_test(NAME itkSquareThreeTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_square3_1.vtk 3 2)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_square3_1.vtk 3 2)
 
 itk_add_test(NAME itkAdaptiveModifiedButterflyTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_butterfly_0.vtk 0 1 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_butterfly_0.vtk 0 1 1)
 
 itk_add_test(NAME itkAdaptiveModifiedButterflyTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_butterfly_1.vtk 0 2 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_butterfly_1.vtk 0 2 1)
 
 itk_add_test(NAME itkAdaptiveLinearTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_linear_0.vtk 1 1 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_linear_0.vtk 1 1 1)
 
 itk_add_test(NAME itkAdaptiveLinearTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_linear_1.vtk 1 2 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_linear_1.vtk 1 2 1)
 
 itk_add_test(NAME itkAdaptiveLoopTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_loop_0.vtk 2 1 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_loop_0.vtk 2 1 1)
 
 itk_add_test(NAME itkAdaptiveLoopTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_loop_1.vtk 2 2 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_loop_1.vtk 2 2 1)
 
 itk_add_test(NAME itkAdaptiveSquareThreeTriangleCellSubdivisionQuadEdgeMeshFilterTest0
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_square3_0.vtk 3 1 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_square3_0.vtk 3 1 1)
 
 itk_add_test(NAME itkAdaptiveSquareThreeTriangleCellSubdivisionQuadEdgeMeshFilterTest1
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_adaptive_square_1.vtk 3 2 1)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_adaptive_square_1.vtk 3 2 1)
 
 itk_add_test(NAME itkCriterionButterflyTriangleCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkCriterionCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_criterion_butterfly.vtk 0 0.001)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_criterion_butterfly.vtk 0 0.01)
 
 itk_add_test(NAME itkCriterionLinearTriangleCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkCriterionCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_criterion_linear.vtk 1 0.001)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_criterion_linear.vtk 1 0.01)
 
 itk_add_test(NAME itkCriterionLoopTriangleCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkCriterionCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_criterion_loop.vtk 2 0.001)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_criterion_loop.vtk 2 0.01)
 
 itk_add_test(NAME itkCriterionSquareTriangleCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkCriterionCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_criterion_square3.vtk 3 0.001)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_criterion_square3.vtk 3 0.01)
 
 itk_add_test(NAME itkButterflyTriangleEdgeCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkEdgeCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_edge_butterfly.vtk 0 0.01)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_edge_butterfly.vtk 0 0.1)
 
 itk_add_test(NAME itkLinearTriangleEdgeCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkEdgeCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_edge_linear.vtk 1 0.01)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_edge_linear.vtk 1 0.1)
 
 itk_add_test(NAME itkLoopTriangleEdgeCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkEdgeCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_edge_loop.vtk 2 0.01)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_edge_loop.vtk 2 0.01)
 
 itk_add_test(NAME itkCriterionButterflyTriangleEdgeCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkCriterionEdgeCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_criterion_edge_butterfly.vtk 0 0.05)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_criterion_edge_butterfly.vtk 0 0.05)
 
 itk_add_test(NAME itkCriterionLinearTriangleEdgeCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkCriterionEdgeCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_criterion_edge_linear.vtk 1 0.05)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_criterion_edge_linear.vtk 1 0.05)
 
 itk_add_test(NAME itkCriterionLoopTriangleEdgeCellSubdivisionQuadEdgeMeshFilterTest
   COMMAND ITKQuadEdgeMeshFilteringTestDriver
   itkCriterionEdgeCellSubdivisionQuadEdgeMeshFilterTest
-  DATA{${INPUTDATA}/ico.vtk} ${TEMP}/ico_criterion_edge_loop.vtk 2 0.05)
+  DATA{${INPUTDATA}/venus.vtk} ${TEMP}/venus_criterion_edge_loop.vtk 2 0.05)
